fixing css for pay button alignment

--- a/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/content-buttons.css
+++ b/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/content-buttons.css
@@ -8,7 +8,7 @@
 }
 
 .contentBand .video .sprite.icon-large-play-orange {
-  left: 38%;
+  left: 42%;
   top: 34%;
 }
 
